--- a/.env
+++ b/.env
@@ -1,25 +1,38 @@
-# Server Configuration
-NODE_ENV=development
+# ===============================
+# SERVER CONFIG
+# ===============================
+NODE_ENV=production
 PORT=5000
 
-# MongoDB
-MONGO_URI=mongodb://127.0.0.1:27017/techlink
+# ===============================
+# MONGODB ATLAS
+# ===============================
+MONGO_URI=mongodb+srv://hridesh027_db_user:dzhEquNRQMK5kIVi@hbtechlinkc.4yswbqv.mongodb.net/mern
 
+
+# ===============================
 # JWT
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+# ===============================
+JWT_SECRET=123456
 JWT_EXPIRE=7d
 
+# ===============================
+# CLOUDINARY
+# ===============================
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=draowpiml
 CLOUDINARY_API_KEY=689191661922679
 CLOUDINARY_API_SECRET=CQFsdOk3_VELNtoC8MlM0BteieE
 CLOUDINARY_UPLOAD_PRESET=techlink_preset
 
+# ===============================
+# FRONTEND
+# ===============================
+FRONTEND_URL=https://hbtechlink.vercel.app
 
-# Frontend URL
-FRONTEND_URL=http://localhost:5173
-
-
+# ===============================
+# EMAIL (GMAIL APP PASSWORD)
+# ===============================
 
 EMAIL_USER=hridesh027@gmail.com
 EMAIL_PASS=galgasaqrxjimbss
