--- a/.env
+++ b/.env
@@ -35,4 +35,5 @@ FRONTEND_URL=https://hbtechlink.vercel.app
 # ===============================
 
 EMAIL_USER=hridesh027@gmail.com
-EMAIL_PASS=galgasaqrxjimbss
+# EMAIL_PASS=galgasaqrxjimbss
+EMAIL_PASS=mqpptdgxvrxhalhs
